7th commit bug fix right sight extra space

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,6 @@
 html,
+nav,
+footer,
 body {
   width: 100%;
   margin: 0px;
